--- a/.github/workflows/update_starrail_res.yml
+++ b/.github/workflows/update_starrail_res.yml
@@ -40,6 +40,7 @@ jobs:
           remove: |
               - 'resources.zip'
               - 'star_rail.zip'
+              - '--cached'
           add: .
       
       - uses: dev-drprasad/delete-tag-and-release@v1.1
