--- a/.github/workflows/update_starrail_res.yml
+++ b/.github/workflows/update_starrail_res.yml
@@ -37,11 +37,12 @@ jobs:
           author_name: github-actions[bot]
           author_email: github-actions[bot]@users.noreply.github.com
           message: ":wrench: 自动更新星铁资源"
-          remove: |
-              - './resources.zip'
-              - './star_rail.zip'
-              - '--cached'
           add: .
+          remove: |
+              - resources.zip
+              - star_rail.zip
+              - --cached
+          
       
       - uses: dev-drprasad/delete-tag-and-release@v1.1
         with:
