--- a/.github/workflows/update_starrail_res.yml
+++ b/.github/workflows/update_starrail_res.yml
@@ -2,6 +2,10 @@ name: Update Star Rail Resources
 
 on:
   workflow_dispatch:
+  push:
+    branches: [main]
+    paths:
+      - "LittlePaimon/star_rail/**"
 
 jobs:
   update:
@@ -39,12 +43,6 @@ jobs:
           message: ":wrench: 自动更新星铁资源"
           add: .
 
-      - uses: dev-drprasad/delete-tag-and-release@v1.1
-        with:
-          tag_name: Resources-V1.0
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          delete_release: true
-
       - name: Tag Repo
         uses: richardsimko/update-tag@v1
         with:
@@ -57,6 +55,7 @@ jobs:
         if: ${{  success() }}
         with:
           tag_name: Resources-V1.0
+          append_body: true
           files: |
             resources.zip
             star_rail.zip
