--- a/.github/workflows/update_file.yml
+++ b/.github/workflows/update_file.yml
@@ -34,3 +34,24 @@ jobs:
           message: ":wrench: 自动更新资源列表"
           add: |
             'resources_list.json'
+
+      - uses: dev-drprasad/delete-tag-and-release@v1.1
+        with:
+          tag_name: Resources-V1.0
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Tag Repo
+        uses: richardsimko/update-tag@v1
+        with:
+          tag_name: Resources-V1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload Resources
+        uses: softprops/action-gh-release@v2
+        if: ${{  success() }}
+        with:
+          tag_name: Resources-V1.0
+          append_body: true
+          files: |
+            resources.zip
